force-app/main/default/objects/Campaign/fields/Canal_de_difusion__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_difusion__c</fullName>
    <description>Lista de selección con los canales más usados para compartir la convocatoria, sirve para hacer seguimiento de las campañas y saber por qué medios se ha tenido un mayor impacto</description>
    <label>Canal de difusión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>