force-app/main/default/objects/Campaign/fields/Fecha_de_contratacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_contratacion__c</fullName>
    <description>Fecha estipulada para que los candidatos que hayan atravesado el proceso de selección exitosamente sean contratados y comiencen a desempeñar sus labores</description>
    <label>Fecha de contratación</label>
    <type>Date</type>
</CustomField>