force-app/main/default/objects/Campaign/fields/Formulario__c.field-meta.xml
<CustomField>
    <fullName>Formulario__c</fullName>
    <description>Link del formulario web vinculado a la campaña</description>
    <formula>IF( ISPICKVAL( Type ,&quot;Salesforce&quot;) ,
 &quot;https://salesforce-academy-evo.000webhostapp.com/?campain=&quot;+Id+&quot;&amp;tipo=1&quot;, 
 IF(ISPICKVAL( Type ,&quot;Evolution&quot;), 
&quot;https://salesforce-academy-evo.000webhostapp.com/?campain=&quot;+Id+&quot;&amp;tipo=2&quot;, 
 &quot;https://salesforce-academy-evo.000webhostapp.com/?campain=&quot;+Id ) )</formula>
    <label>Formulario</label>
    <type>Text</type>
</CustomField>