force-app/main/default/objects/Campaign/fields/Numero_de_Campa_a__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Campa_a__c</fullName>
    <description>Código único para dar una identificación a cada campaña</description>
    <displayFormat>NC{00000}</displayFormat>
    <label>Número de Campaña</label>
    <type>AutoNumber</type>
</CustomField>