force-app/main/default/objects/Campaign/fields/Numero_de_vacantes__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_vacantes__c</fullName>
    <description>Número de cupos disponibles para contratación en dicha convocatoria</description>
    <label>Número de vacantes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>